fixed overflow wrap?

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -183,8 +183,11 @@ input, select, textarea {
 	h1, h2, h3, h4, h5, h6 {
 		color: #ffffff;
 		font-weight: 600;
-		line-height: 1.65;
+		/*line-height: 1.65;*/
 		margin: 0 0 1em 0;
+	}
+	h2, h3, h4, h5, h6 {
+		line-height: 1.65;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -193,7 +196,8 @@ input, select, textarea {
 		}
 
 	h1 {
-		font-size: 3.0em;
+	    font-size: 3.0em;
+	    line-height: 1.15;
 	}
 
 	h2 {
@@ -1775,6 +1779,7 @@ input, select, textarea {
 		width: -ms-max-content;
 		width: max-content;
 		margin-bottom: 2em;
+		overflow-wrap: normal;
 	}
 
 		header.major > :first-child {
@@ -3308,10 +3313,10 @@ input, select, textarea {
 			-webkit-transition: opacity 2.5s ease;
 			-ms-transition: opacity 2.5s ease;
 			transition: opacity 2.5s ease;
-			-moz-transition-delay: 0.25s;
-			-webkit-transition-delay: 0.25s;
-			-ms-transition-delay: 0.25s;
-			transition-delay: 0.25s;
+			-moz-transition-delay: 0.75s;
+			-webkit-transition-delay: 0.75s;
+			-ms-transition-delay: 0.75s;
+			transition-delay: 0.75s;
 			-moz-animation: none;
 			-webkit-animation: none;
 			-ms-animation: none;
@@ -3468,10 +3473,10 @@ input, select, textarea {
 			-webkit-transition: opacity 1.0s ease;
 			-ms-transition: opacity 1.0s ease;
 			transition: opacity 1.0s ease;
-			-moz-transition-delay: 0.25s;
-			-webkit-transition-delay: 0.25s;
-			-ms-transition-delay: 0.25s;
-			transition-delay: 0.25s;
+			-moz-transition-delay: 0.75s;
+			-webkit-transition-delay: 0.75s;
+			-ms-transition-delay: 0.75s;
+			transition-delay: 0.75s;
 			pointer-events: none;
 			background-color: #242943;
 			content: '';
